Mod: title translation

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-531-reflux
       <section class="section about-me" data-section="section1">
         <div class="container">
           <div class="section-heading">
-            <h2>About Me</h2>
+            <h2>Acerca de mi</h2>
             <div class="line-dec"></div>
             <span
               >This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
@@ -103,7 +103,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Test para trabajo final Herr. Dis. Dig. 3</h4>
                   <p>
                     Donec tristique feugiat lacus, at sollicitudin nunc euismod
                     sed. Mauris viverra, erat non sagittis gravida, elit dui
